added: name, location, mail

--- a/Week3/BusinessCard/app/src/main/res/values/strings.xml
+++ b/Week3/BusinessCard/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="alwaysInMotion">Always in Motion</string>
     <string name="logoText">Logo texto Android</string>
     <string name="joinUs">Join us!</string>
+    <string name="ritaCasiello">Rita Casiello</string>
+    <string name="barcelona">Barcelona,  Spain</string>
+    <string name="mail">rituzka@gmail.com</string>
 </resources>
