menu item added

--- a/Week3/BusinessCard/app/src/main/res/values/strings.xml
+++ b/Week3/BusinessCard/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="ritaCasiello">Rita Casiello</string>
     <string name="barcelona">Barcelona,  Spain</string>
     <string name="mail">rituzka@gmail.com</string>
+    <string name="call">Phone: +34617004968</string>
+    <string name="schedule">Customer Service schedule: from 9:00 to 19:00</string>
 </resources>
