--- a/Week3/BusinessCard/app/src/main/res/values/strings.xml
+++ b/Week3/BusinessCard/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="mail">rituzka@gmail.com</string>
     <string name="call">Phone: +34617004968</string>
     <string name="schedule">Customer Service schedule: from 9:00 to 19:00</string>
+    <string name="share_image">Share image!</string>
 </resources>
