shared preferences log in, menu log out, function to login

--- a/Week5/BlockbusterRecycler/app/src/main/res/values/strings.xml
+++ b/Week5/BlockbusterRecycler/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="movie_logo">Movie Logo</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
+    <string name="logout">Logout</string>
 </resources>
