error login corrected

--- a/Week5/BlockbusterRecycler/app/src/main/res/values/strings.xml
+++ b/Week5/BlockbusterRecycler/app/src/main/res/values/strings.xml
@@ -36,4 +36,6 @@
     <string name="usernameshort">Username too short!</string>
     <string name="usernameempty">Username cannot be empty</string>
     <string name="inputerror">Fields too short or empty, try again!</string>
+    <string name="saveData">save_data</string>
+    <string name="userlogged">user_logged</string>
 </resources>
