--- a/Week7/ThePokemons/app/src/main/res/values/strings.xml
+++ b/Week7/ThePokemons/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="KEY_TOKEN">wwe</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="pikachu">Pikachu</string>
 </resources>
