--- a/Week7/ThePokemons/app/src/main/res/values/strings.xml
+++ b/Week7/ThePokemons/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">ThePokemons</string>
-    <string name="KEY_TOKEN">wwe</string>
+    <string name="KEY_TOKEN">token</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="pikachu">Pikachu</string>
